Fixed 2nd major whitespace gap

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@ html, body {
     height: 100%;
     background-color: #F8F8F8;
 }
+.navbar {
+	margin-bottom: 0px;
+}
+
 .navbar-default {
     background-color: transparent;
     border-color: transparent;
